--- a/frontend/src/pages/Contact/sections/DemoRequestForm.module.scss
+++ b/frontend/src/pages/Contact/sections/DemoRequestForm.module.scss
@@ -82,6 +82,8 @@
   display: flex;
   flex-direction: column;
   gap: $space-5;
+
+  @include respond-below('sm') { padding-inline: $space-5; }
 }
 
 .formRow {
